<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Hello World!"
        android:gravity="center_horizontal"/>

    <EditText
        android:id="@+id/textoET"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/texto_inicial"
        android:inputType="number"
        android:minHeight="48dp" />

    <Spinner
        android:id="@+id/opcoesSp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/opcoes"
        android:minHeight="48dp" />

    <CheckBox
        android:id="@+id/selecionadoCb"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/selecionado"/>

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <RadioButton
            android:id="@+id/radio1Rb"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/radio_1"
            android:checked="true"/>
        <RadioButton
            android:id="@+id/radio2Rb"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/radio_2"/>
    </RadioGroup>

    <Button
        android:id="@+id/cliqueAquiBt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/enviar"
        android:layout_marginHorizontal="5dp"/>

</LinearLayout>